[gd_scene load_steps=5 format=3 uid="uid://cridy0f8yah3v"]

[ext_resource type="Script" path="res://gameObjects/player/playerWeapons/launcher/launcher.gd" id="1_xthbi"]
[ext_resource type="Texture2D" uid="uid://dfphfdv1iodqm" path="res://art/Custom/launcher.png" id="2_0thwa"]
[ext_resource type="AudioStream" uid="uid://pdr2fsc3ytlr" path="res://sfx/Space_Ambience_and_Sound_Pack/Door/Door_Open.wav" id="3_00cwc"]
[ext_resource type="AudioStream" uid="uid://c4qsfbdacxtru" path="res://sfx/Space_Ambience_and_Sound_Pack/Rocket/rocketShort.wav" id="4_7q33o"]

[node name="launcher" type="Node2D"]
script = ExtResource("1_xthbi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0thwa")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7

[node name="timeoutTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="SFX" type="Node" parent="."]

[node name="readySound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_00cwc")
bus = &"SFX"

[node name="shootSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_7q33o")
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="timeoutTimer" to="." method="_on_timeout_timer_timeout"]
